////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.ui.swing.debug.viewer.empty;

import com.telenav.aonia.map.geography.shape.rectangle.Rectangle;
import com.telenav.aonia.map.ui.swing.debug.InteractiveView;
import com.telenav.aonia.map.ui.swing.debug.ViewableIdentifier;
import com.telenav.kivakit.core.kernel.language.time.Duration;
import com.telenav.kivakit.core.kernel.language.values.level.Percent;

public class NullInteractiveView extends NullView implements InteractiveView
{
    @Override
    public void frameComplete()
    {
    }

    @Override
    public void frameSpeed(final Duration delay)
    {
    }

    @Override
    public void pullToFront(final ViewableIdentifier identifier)
    {
    }

    @Override
    public void pushToBack(final ViewableIdentifier identifier)
    {
    }

    @Override
    public void zoomTo(final Rectangle bounds)
    {
    }

    @Override
    public void zoomToContents(final Percent margin)
    {
    }
}
