////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.ui.swing.debug.viewer.empty;

import com.telenav.aonia.map.ui.swing.debug.View;
import com.telenav.aonia.map.ui.swing.debug.Viewer;

import java.util.Collection;
import java.util.Collections;

public class NullViewer implements Viewer
{
    private final View view = new NullView();

    @Override
    public View view(final String name)
    {
        return view;
    }

    @Override
    public Collection<View> views()
    {
        return Collections.singleton(view);
    }
}
